--- a/src/app/booking/booking/booking.component.html
+++ b/src/app/booking/booking/booking.component.html
@@ -29,10 +29,10 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="dots-image">
-            <img src="/assets/images/dots/dots.png" alt="Dots Image">
-        </div> -->
         <div class="col-xl col-lg col-md-auto">
+            <div class="dots-image largeScreen">
+                <img src="/assets/images/dots/dots.png" class="mt-4" alt="Dots Image">
+            </div>
         </div>
         <div class="col-xl-auto col-lg-5 col-md-5">
             <img src="/assets/images/tourist-image/Image.png" class="tourist-image img-fluid" alt="Tourist Image">
