--- a/src/app/booking/booking/categories/categories.component.html
+++ b/src/app/booking/booking/categories/categories.component.html
@@ -1,25 +1,133 @@
-<div class="row my-xl-5 my-4">
-    <div class="col-xl-4 col-lg-6 col-md-6 col">
-        <div class="head-text text-center text-md-start">
-            Categories
+<div class="largeScreen">
+    <div class="row my-xl-5 my-4">
+        <div class="col-xl-4 col-lg-6 col-md-6 col">
+            <div class="head-text text-center text-md-start">
+                Categories
+            </div>
+            <div class="sub-text my-lg-4 my-3 my-md-3">
+                Here are lots of interesting destinations to visit, but don’t be confused—they’re already grouped by
+                category.
+            </div>
         </div>
-        <div class="sub-text my-lg-4 my-3 my-md-3">
-            Here are lots of interesting destinations to visit, but don’t be confused—they’re already grouped by
-            category.
+        <div
+            class="col-xl-8 col-lg-6 col-md-6 col d-flex align-items-start justify-content-md-end justify-content-center gap-2 gap-lg-3">
+            <button class="previous-button button" data-bs-target="#largeCategoriesCarousel" data-bs-slide="prev">
+                <img src="/assets/images/previous-icon/previous-icon.svg" alt="">
+            </button>
+            <button class="next-button button" data-bs-target="#largeCategoriesCarousel" data-bs-slide="next">
+                <img src="/assets/images/next-icon/next-icon.svg" alt="">
+            </button>
         </div>
     </div>
-    <div class="col-xl-8 col-lg-6 col-md-6 col d-flex align-items-start justify-content-md-end justify-content-center gap-2 gap-lg-3">
-        <button class="previous-button button" (click)="getPrevious()">
-            <img src="/assets/images/previous-icon/previous-icon.svg" alt="">
-        </button>
-        <button class="next-button button" (click)="getNext()">
-            <img src="/assets/images/next-icon/next-icon.svg" alt="">
-        </button>
+    <div class="row my-xl-5 pb-xl-5">
+        <div id="largeCategoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column"
+                            *ngFor="let category of categories">
+                            <img src="{{ category.image}}" alt="">
+                            <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column"
+                            *ngFor="let category of categories">
+                            <img src="{{ category.image}}" alt="">
+                            <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<div class="row my-xl-5 pb-xl-5">
-    <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column" *ngFor="let category of categories">
+<div class="mediumScreen">
+    <div class="row my-xl-5 my-4">
+        <div class="col-xl-4 col-lg-6 col-md-6 col">
+            <div class="head-text text-center text-md-start">
+                Categories
+            </div>
+            <div class="sub-text my-lg-4 my-3 my-md-3">
+                Here are lots of interesting destinations to visit, but don’t be confused—they’re already grouped by
+                category.
+            </div>
+        </div>
+        <div
+            class="col-xl-8 col-lg-6 col-md-6 col d-flex align-items-start justify-content-md-end justify-content-center gap-2 gap-lg-3">
+            <button class="previous-button button" data-bs-target="#mediumCategoriesCarousel" data-bs-slide="prev">
+                <img src="/assets/images/previous-icon/previous-icon.svg" alt="">
+            </button>
+            <button class="next-button button" data-bs-target="#mediumCategoriesCarousel" data-bs-slide="next">
+                <img src="/assets/images/next-icon/next-icon.svg" alt="">
+            </button>
+        </div>
+    </div>
+    <div class="row my-xl-5 pb-xl-5">
+        <div id="mediumCategoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column"
+                            *ngFor="let category of categories | slice: 0 : 3">
+                            <img src="{{ category.image}}" alt="">
+                            <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column"
+                            *ngFor="let category of categories | slice: 0 : 3">
+                            <img src="{{ category.image}}" alt="">
+                            <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="smallScreen">
+    <div class="row my-xl-5 my-4">
+        <div class="col-xl-4 col-lg-6 col-md-6 col">
+            <div class="head-text text-center text-md-start">
+                Categories
+            </div>
+            <div class="sub-text my-lg-4 my-3 my-md-3">
+                Here are lots of interesting destinations to visit, but don’t be confused—they’re already grouped by
+                category.
+            </div>
+        </div>
+        <div
+            class="col-xl-8 col-lg-6 col-md-6 col d-flex align-items-start justify-content-md-end justify-content-center gap-2 gap-lg-3">
+            <button class="previous-button button" data-bs-target="#smallCategoriesCarousel" data-bs-slide="prev">
+                <img src="/assets/images/previous-icon/previous-icon.svg" alt="">
+            </button>
+            <button class="next-button button" data-bs-target="#smallCategoriesCarousel" data-bs-slide="next">
+                <img src="/assets/images/next-icon/next-icon.svg" alt="">
+            </button>
+        </div>
+    </div>
+    <div class="row my-xl-5 pb-xl-5">
+        <div id="smallCategoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div *ngFor="let category of categories; first as isFirst">
+                    <div [ngClass]="isFirst ? 'carousel-item active' : 'carousel-item'">
+                        <div class="row">
+                            <div class="col d-flex flex-column">
+                                <img src="{{ category.image}}" alt="">
+                                <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="col-lg-2 col-md-4 col d-flex justify-content-evenly flex-column" *ngFor="let category of categories">
         <img src="{{ category.image}}" alt="">
         <div class="text-center caption mt-lg-3 mt-2">{{ category.caption }}</div>
-    </div>
-</div>
+    </div> -->
