--- a/src/app/booking/booking/destination/destination.component.scss
+++ b/src/app/booking/booking/destination/destination.component.scss
@@ -27,7 +27,7 @@
     background-color: #2D3134;
 }
 
-.card {
+.carousel-card {
     background: #FAF8ED;
     border: 2px solid #FFFFFF;
     box-shadow: 0px 24px 90px rgba(192, 188, 161, 0.22);
@@ -108,55 +108,6 @@
 //     background: #2D3134;
 //     color: #FFFFFF;
 // }
-
-@media (max-width: 768px) and (max-width: 991px) {
-    .head-text {
-        font-size: 42px;
-        line-height: normal;
-        letter-spacing: normal;
-        color: #2D3134;
-        width: auto;
-        height: auto;
-    }
-
-    .sub-text {
-        font-size: 18px;
-        line-height: 28px;
-        color: #5B5F62;
-        width: auto;
-    }
-}
-
-@media (max-width: 1200px) {
-    .content {
-        min-height: 189px;
-    }
-
-    .card {
-        .title {
-            font-size: 21px;
-        }
-
-        .caption {
-            font-weight: 400;
-            font-size: 14px;
-        }
-
-        .price {
-            font-size: 21px;
-
-            .person-text {
-                font-size: 11px;
-            }
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .content {
-        min-height: 131px;
-    }
-}
 
 .visit-location {
     position: relative;
@@ -267,5 +218,111 @@
 
     .container-six {
         height: 207px;
+    }
+
+    .smallScreen,
+    .largeScreen {
+        display: none;
+    }
+
+    .mediumScreen {
+        display: contents;
+    }
+    .head-text {
+        font-size: 42px;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #2D3134;
+        width: auto;
+        height: auto;
+    }
+
+    .sub-text {
+        font-size: 18px;
+        line-height: 28px;
+        color: #5B5F62;
+        width: auto;
+    }
+}
+
+.city-next-button {
+    height: 34px;
+    width: 34px;
+    border: 1px solid #2D3134;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.city-previous-button {
+    height: 34px;
+    width: 34px;
+    border: 1px solid #2D3134;
+    border-radius: 50%;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+
+    .smallScreen {
+        display: none;
+    }
+
+    .largeScreen {
+        display: contents;
+    }
+}
+
+@media (max-width: 767px) {
+    .content {
+        min-height: 131px;
+    }
+
+    .largeScreen {
+        display: none;
+    }
+
+    .smallScreen {
+        display: contents;
+    }
+
+    .head-text {
+        font-size: 42px;
+        line-height: normal;
+        letter-spacing: normal;
+        color: #2D3134;
+        width: auto;
+        height: auto;
+    }
+
+    .sub-text {
+        font-size: 18px;
+        line-height: 28px;
+        color: #5B5F62;
+        width: auto;
+    }
+}
+
+@media (max-width: 1200px) {
+    .content {
+        min-height: 189px;
+    }
+
+    .carousel-card {
+        .title {
+            font-size: 21px;
+        }
+
+        .caption {
+            font-weight: 400;
+            font-size: 14px;
+        }
+
+        .price {
+            font-size: 21px;
+
+            .person-text {
+                font-size: 11px;
+            }
+        }
     }
 }
