--- a/src/app/booking/booking/footer/footer.component.html
+++ b/src/app/booking/booking/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="row my-5 py-5">
-    <div class="col">
+    <div class="col-md-4 col-12 d-flex flex-column align-items-center align-items-md-start">
         <div class="icon-block">
             <img src="/assets/images/title-icon/Union.svg" alt="">
             Salty
         </div>
-        <div class="sub-text my-4">
+        <div class="sub-text my-4 text-center">
             Enjoy the touring with Salty
         </div>
         <div class="d-flex gap-3">
@@ -13,16 +13,14 @@
             <img src="/assets/images/sign-in/twitter-icon.svg" alt="">
         </div>
     </div>
-    <div class="col">
-        
-    </div>
-    <div class="col">
-        
-    </div>
-    <div class="col">
-        
-    </div>
-    <div class="col">
-        
+    <div class="col-md-8 col-12 my-5 my-md-0">
+        <div class="d-flex justify-content-between flex-md-row flex-column align-items-center align-items-md-start">
+            <div *ngFor="let footer of footerData" class="text-center text-md-start mb-5 mb-md-0">
+                <div class="footer-head-text mb-3 mb-0" *ngFor="let data of footer.data | slice: 0 : 1">
+                    {{ data }}
+                </div>
+                <div class="footer-sub-text" *ngFor="let data of footer.data | slice: 1 : 5">{{ data }}</div>
+            </div>
+        </div>
     </div>
 </div>
