--- a/src/app/booking/booking/footer/footer.component.scss
+++ b/src/app/booking/booking/footer/footer.component.scss
@@ -15,5 +15,28 @@
     line-height: 26px;
     color: #5B5F62;
     width: 141px;
+}
 
+.footer-sub-text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 34px;
+    color: #676A6C;
+}
+
+.footer-head-text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 18px;
+    color: #2D3134;
+}
+
+@media (max-width: 767px) {
+    .sub-text {
+        width: auto;
+    }
 }
