--- a/src/app/booking/booking/header/header.component.html
+++ b/src/app/booking/booking/header/header.component.html
@@ -9,8 +9,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-5 align-items-center justify-content-lg-between">
-                <li class="nav-item" *ngFor="let item of navItems">
+                <li class="nav-item" *ngFor="let item of navItems; first as asFirst">
                     <a class="nav-link active" href="#">{{ item }}</a>
+                    <div class="focus-line"></div>
                 </li>
             </ul>
             <div class="d-flex justify-content-center mb-3">
